--- a/src/components/listing.scss
+++ b/src/components/listing.scss
@@ -20,5 +20,10 @@
         .table-cell {
             word-break: break-all;
         }
+
+        .table-icon {
+            line-height: 100%;
+            vertical-align: middle;
+        }
     }
 }
